# codility_solutions

./: CMakeLists.txt  README.md  arrays_cyclic_rotation.cpp  binary_gap.cpp  counting_perm_check.cpp  frog_river_one.cpp  frogjmp.cpp  max_counters.cpp  odd_occurrences_in_array.cpp  passing_cars.cpp  perm_missing_elem.cpp  tape_equilibrium.cpp
